all show page having only white patch and alignmeny of profile picture css issue solve by nilam

--- a/app/assets/stylesheets/custome.css
+++ b/app/assets/stylesheets/custome.css
@@ -28,6 +28,7 @@
 .error_space{height:64px;}
 .error_space_h57{height:57px}
 .socialIconChkbox .md-checkbox{margin-left:0px;}
+.save_button.bgWhite{background: #fff;}
 /*=======================Nilam CSS End =================================*/
 /*form#new_edm.form-horizontal div.mdl-grid.mdl-shadow--1dp div.mdl-cell--12-col.mdl-cell--12-col-tablet.ml-color--shades-white.m-8{margin-bottom: 0px !important;}
 form#edit_edm_12 div.mdl-grid.mdl-shadow--1dp div.mdl-cell--12-col.mdl-cell--12-col-tablet.ml-color--shades-white.m-8{margin-bottom: 0px !important;}*/
